Working login and account creation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Brss</title>
+  <title><%= yield(:title) %><%= ' | ' if content_for? :title %>Big Red Shipping &amp; Storage</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class='<%= controller.controller_name %>'>
 
 <%= yield %>
 
+<script type='text/javascript' src='http://code.jquery.com/jquery-1.11.0.min.js'></script>
 </body>
 </html>
