Sidebar nav scroll

--- a/app/views/static/welcome.html.erb
+++ b/app/views/static/welcome.html.erb
@@ -3,11 +3,11 @@
   <h2 id='ss'>Shipping &amp; storage</h2>
   <nav id='nav'>
     <ul>
-      <li>Get started</li>
-      <li>Services</li>
-      <li>FAQs</li>
-      <li>Jobs</li>
-      <li>Contact</li>
+      <li><a href='#getStarted'>Get started</a></li>
+      <li><a href='#services'>Services</a></li>
+      <li><a href='#faqs'>FAQs</a></li>
+      <li><a href='#jobs'>Jobs</a></li>
+      <li><a href='#contact'>Contact</a></li>
     </ul>
   </nav>
 </section>
