--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -31,9 +31,10 @@ body.static {
       ul {
         list-style: none;
         padding-left: 0;
-        li {
+        li, a {
           color: #777;
           margin: 0.6em 0;
+          text-decoration: none;
           @include vendor-prefix(transition, color 0.25s);
           &:hover {
             color: #333;
@@ -115,7 +116,11 @@ body.static {
         opacity: 0;
         text-align: center;
         width: 100px;
-        @include vendor-prefix(transition, opacity 0.5s);
+        @include vendor-prefix(transition, "background 0.25s, opacity 0.5s");
+        &:hover {
+          background: transparentize(white, 0.2);
+          cursor: pointer;
+        }
       }
     }
     #info {
