Begin display user profile with React

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,6 @@
 <%= yield %>
 
 <script type='text/javascript' src='http://code.jquery.com/jquery-1.11.0.min.js'></script>
+<%= javascript_include_tag controller.controller_name %>
 </body>
 </html>
