--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -9,6 +9,8 @@ body.static {
     background: white;
     bottom: 0;
     left: -180px;
+    opacity: 0.9;
+    overflow: auto;
     padding: 1.5em;
     position: fixed;
     text-align: center;
@@ -124,7 +126,7 @@ body.static {
       }
     }
     #info {
-      background: white;
+      background: transparentize(white, 0.1);
       margin-top: 120px;
       padding: 2em 0;
       section {
