--- a/app/views/static/download.html.erb
+++ b/app/views/static/download.html.erb
@@ -1,1 +1,1 @@
-<a href="itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=http://brss.herokuapp.com/brss.plist" id="text">Download app</a>
+<a style='font-size: 3em' href="itms-services://?action=download-manifest&url=itms-services://?action=download-manifest&url=http://brss.herokuapp.com/brss.plist" id="text">Download app</a>
