Add HTTPS to plis

--- a/app/views/static/download.html.erb
+++ b/app/views/static/download.html.erb
@@ -1,1 +1,1 @@
-<a style='font-size: 6em' href="itms-services://?action=download-manifest&url=https://brss.herokuapp.com/brss.plist" id="text">Download app</a>
+<a href="itms-services://?action=download-manifest&url=https://brss.herokuapp.com/brss.plist" id="text"><button class='btn btn-primary'>Download</button></a>
