Update server code to work with field rep names from Gorges

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -83,7 +83,7 @@ body.admin {
           input[type='text'] {
             font-size: 1em;
             height: 2em;
-            width: 70%;
+            width: auto;
           }
           button[type='button'] {
             margin-top: -0.15em;
