Add dataclips links to dashboard

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -6,4 +6,6 @@
     <p id='wait'></p>
   </div>
   <div class='row' id='provisionTarget'></div>
+  <div class='row' id='dbLinks'>
+    <p class='col-xs-12'><a href='https://dataclips.heroku.com/dqaknknmlegcenqbbngjclbewusp#BRSS-Contracts' target='_blank'>Raw contracts</a> | <a href='https://dataclips.heroku.com/flgibcbuddmtjezugdfflakogtan#BRSS-Appointments' target='_blank'>Raw appointments</a> | <a href='https://dataclips.heroku.com/wxdtmbpsbgzwxjvaotivonqhifde#BRSS-Users' target='_blank'>Raw users</a> | <a href='https://dataclips.heroku.com/melvalfwubfoczwgoxruvgclzrxk#BRSS-Provisions' target='_blank'>Raw provisions</a></p>
 </div>
