Display supplies correctly in appointment overview

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -67,7 +67,7 @@
             <td><%= i.item_type%></td>
             <td><%= i.weight.to_f %></td>
             <td>$<%= '%.2f' % i.custom_price.to_f %></td>
-            <td><%= i.value %></td>
+            <td>$<%= '%.2f' % i.value %></td>
             <td><%= i.should_insure %></td>
           </tr>
         <% end %>
@@ -81,8 +81,9 @@
           <th>Count</th>
         </tr>
         <% @supplies.each do |s| %>
+          <% next if s.is_deleted %>
           <tr>
-            <td><%= s.description%></td>
+            <td><%= s.name %></td>
             <td><%= s.count %></td>
           </tr>
         <% end %>
