--- a/app/assets/stylesheets/appointments.css.scss
+++ b/app/assets/stylesheets/appointments.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the appointments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+label {
+  line-height: 1.5em;
+  position: relative;
+  text-align: right;
+  top: 0.5em;
+}
